@startuml sokoban

class Game {
    canvas: DOMElement
    ctx: DOMElement
    tileSize: Integer
    world: World | null
    levelIndex: Integer
    worldIndex: Integer
    spriteSheet: Image
    running: Boolean
    loadWorld()
    loadLevel()
    init()
    bindEvents()
    loop()
    update()
    draw()
    checkVictory()
    nextLevel()
}

class World {
    name: Integer
    levels: Object
    spriteSheet: Image
    loadSpritesheet()
}

class Level {
    tiles: Array<Tile>
    boxes: Array<Box>
    player: Player
    buttons: Array<Button>
    spriteSheet: Image
    update()
    isNearFire()
    isNearElectricity()
    draw()
    canMoveTo()
    getBoxAt()
    isCompleted()
}

class Tile {
    type: String
    spriteSheet: Image
    spriteCoordinates: {x: Integer, y: Integer}
    draw()
}

class Button {
    x: Integer
    y: Integer
    requiredType: String
    isPressed()
}

class Box {
    x: Integer
    y: Integer
    type: String
    spriteSheet: Image
    spriteSheetCoordinates: {x: Integer, y: Integer}
    move()
    updateState()
    draw()
}

class Player {
    x: Integer
    y: Integer
    spriteSheet: Image
    spriteSheetCoordinates: {x: Integer, y: Integer}
    handleInput()
    draw()
}

Game --> World
Game --> Level
Game --> Player

Level --> Box
Level --> Tile
Level --> Player
Level --> Button
Box --> Tile : "s'interagit avec"
Box --> Button : "peut activer"

@enduml
